--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@animal) do |f| %>
-  <% if @animal.errors.any? %>
+<%= form_for(@score) do |f| %>
+  <% if @score.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@animal.errors.count, "error") %> prohibited this fu from being saved:</h2>
+      <h2><%= pluralize(@score.errors.count, "error") %> prohibited this fu from being saved:</h2>
 
       <ul>
-      <% @animal.errors.full_messages.each do |msg| %>
+      <% @score.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-      <%= f.label :race %><br>
-      <%= f.select :race, Animal.races.map {|r| [r.humanize, r.camelcase]}, {}, disabled: @race != "Animal" %> 
+      <%= f.label :type %><br>
+      <%= f.select :type, Score.types.map {|r| [r.humanize, r.camelcase]}, {}, disabled: @type != "score" %> 
   </div>
 
   <div class="field">
